src/scss/components/_StartMenuReact.scss
.ordino-start-menu {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  background-color: map-get($theme-colors, "ordino-gray-1");
  z-index: 99; // above all other content

  // stretch background to span the whole page
  height: fit-content;
  min-height: 100vh;

  padding-top: 40px; // height of the navbar (= phovea_ui header) and `fixed-top` is applied

  &.ordino-start-menu-open {
    display: grid;
    grid-template-rows: 1fr auto; // use available space for tab content (1fr) and push footer always to the bottom (auto)
  }

  .ordino-icon-1 {
    font-size: 2rem;
  }

  .ordino-icon-2 {
    background-color: map-get($theme-colors, "ordino-gray-2");
    color: map-get($theme-colors, "ordino-white");
    display: inline-flex;
    align-items: center;
    justify-content: center;
    width: 2.2rem;
    height: 2.2rem;
    border-radius: 50%;
    font-size: 1rem;
  }

  @media only screen and (max-width: 1500px) {
    .scrollspy-nav {
      display: none;
    }
  }

  .scrollspy-nav {
    position: fixed;
    top: 6em;

    .nav-link {
      color: map-get($theme-colors, "ordino-gray-4");
      font-size: 1.12em;
      padding-left: 2.5rem;

      &.active {
        color: inherit;
        font-weight: 500;
        position: relative;

        &:before {
          @extend .fas;
          content: fa-content($fa-var-angle-right);
          position: absolute;
          top: 0.5rem;
          left: 1rem;
          font-size: 1.3em;
        }
      }
    }
  }

  .mouse-icon {
    &::before {
      content: "";
      display: block;
      height: 0.85em;
      background: no-repeat center/20px
        url("~tdp_gene/dist/assets/previews/mouse-icon.png");
    }
  }

  .nav-link {
    position: relative;
    color: map-get($theme-colors, "ordino-gray-4");
    font-size: 1.12em;
    .active {
      color: inherit;
      font-weight: 500;
      &:before {
        @extend .fas;
        content: fa-content($fa-var-angle-right);
        position: absolute;
        top: 0.5rem;
        left: 1rem;
        font-size: 1.3em;
      }
    }
  }

  .dataset-entry:not(:first-child) {
    border-left: 1px solid map-get($theme-colors, "ordino-gray-5");
  }

  .dropdown-parent:hover,
  .dropdown-parent:focus-within {
    .list-item-dropdown {
      visibility: visible;
    }
  }

  .list-item-dropdown {
    visibility: hidden;

    .dropdown-toggle {
      color: map-get($theme-colors, "ordino-gray-4");
    }

    .dropdown-toggle::after {
      display: none;
    }
    .dropdown-delete {
      color: red;
      &:hover {
        background-color: rgb(255, 233, 233);
      }
    }
  }

  .session-tab {
    height: 46px;
    border-bottom: 2px solid map-get($theme-colors, "ordino-gray-5");

    &.card-header-pills {
      margin-left: 0 !important;
      margin-right: 0 !important;
    }

    .nav-item {
      > a {
        // clear bootstrap styles
        &,
        &:hover,
        &:focus,
        a:active {
          font-weight: 500;
          color: inherit;
          background: none;
        }

        &::after {
          content: "";
          position: absolute;
          top: 44px;
          left: 0;
          width: 0px;
          height: 0px;
          background: black;
          transition: width 0.3s;
        }
        &.active::after {
          width: 100%;
          height: 2px;
        }
        &.disabled {
          opacity: 0.2;
        }
      }
    }
  }

  .session-dropzone {
    border: 1px dashed map-get($theme-colors, "ordino-gray-4");
    border-radius: 6px;
    padding: 0.6rem;

    p:nth-child(1) {
      font-weight: 500;
      color: map-get($theme-colors, "ordino-gray-4");
    }
    p:nth-child(2) {
      color: map-get($theme-colors, "ordino-gray-6");
    }
  }
}

.session-item:not(:last-child) {
  border-bottom: 1px solid map-get($theme-colors, "ordino-gray-5");
}

.start-menu-close {
  color: map-get($theme-colors, "ordino-gray-4");
  font-size: 1.2em;
  &:hover {
    color: darken($color: map-get($theme-colors, "ordino-gray-4"), $amount: 20);
  }
}

